<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeImageView"
        android:layout_width="94dp"
        android:layout_height="101dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/picture_of_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:srcCompat="@drawable/ic_baseline_panorama_wide_angle_24"
        tools:srcCompat="@drawable/ic_baseline_panorama_wide_angle_24" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@+id/placeImageView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="79dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:numStars="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/placeImageView"
        app:layout_constraintTop_toBottomOf="@+id/shortDescriptiontTextView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/shortDescriptiontTextView"
        android:layout_width="102dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="Short description"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/placeImageView"
        app:layout_constraintTop_toBottomOf="@+id/addressTextView" />



</androidx.constraintlayout.widget.ConstraintLayout>